<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="ST_TsConnectionInfoEL2904" Id="{1fea3a61-db5b-4a9d-8319-7a692eb22e96}">
    <Declaration><![CDATA[TYPE ST_TsConnectionInfoEL2904 :
(*******************************************************************************************************
Description			:	Connection information data of EtherCAT Slaves with 1 byte safe data 
Supported terminals : 	EL1904, EL2904...
Date 				:	04.04.2016
********************************************************************************************************)
STRUCT

	nState 	 								:USINT;
	nDiag 		 							:USINT;
	nInOutSafeDataByte1						:BYTE;
	
END_STRUCT
END_TYPE
(* End *)]]></Declaration>
  </DUT>
</TcPlcObject>