<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_TsCycleDiagObj" Id="{2dfaabe1-d267-4dc6-a0f0-c93d48186595}">
    <Declaration><![CDATA[TYPE E_TsCycleDiagObj :
(*******************************************************************************************************
Description			:	Enumeration read diagnosis objects steps 
Supported terminals : 	EL1904, EL2904, EL69xx, AX5805, AX5806
Date 				:	04.04.2016
********************************************************************************************************)
(

	eCycleDiagObj_Init						:= 0,
	eCycleDiagObj_ReadTemperature			,
	eCycleDiagObj_ReadTemperatureC1			,
	eCycleDiagObj_ReadTemperatureC2			,
	eCycleDiagObj_ReadErrorIndices			,	
	eCycleDiagObj_ReadDiag					,	
	eCycleDiagObj_ReadDelay					,	
	eCycleDiagObj_Done						,
	eCycleDiagObj_Error						:=999,
	eCycleDiagObj_NoError					
	
);
END_TYPE
(* End *)]]></Declaration>
  </DUT>
</TcPlcObject>