<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="ST_TsSlave3Temp" Id="{3f978900-da6c-4d92-9ad9-6f13bca5aef0}">
    <Declaration><![CDATA[TYPE ST_TsSlave3Temp :
(*******************************************************************************************************
Description			:	EtherCAT Slaves with 3 internal temperatures
Supported terminals : 	EL2904
Date 				:	04.04.2016
********************************************************************************************************)
STRUCT
	
	nInternalTemperature1					:INT;	(* Temperature 1 [°C] *)
	nInternalTemperature2					:INT;	(* Temperature 2 [°C] *)
	nInternalTemperatureOutputs				:INT;	(* Temperature 2 [°C] *)
	
END_STRUCT
END_TYPE
(* End *)]]></Declaration>
  </DUT>
</TcPlcObject>